overflow corrected

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,8 @@ body {
   background-color: rgb(59, 1, 59);
   width: 5px;
 }
+
+.main-con{
+  max-width: 100vw;
+  overflow-x: hidden;
+}
